- LFBuild2DLPF, LFBuild4DLPF for frequency-domain lowpass filters, optionally anisotropic
- Smarter search for of white image and calibration databases decoding and rectifying; More informative error messages when locating white databases / files

Decoding improvements:
- New decode options WeightedDemosaic, WeightedInterp for improved demosaicing and interpolations (reduce ghosting artifacts on external views).
- Improved colours and exposure with decode options NormaliseWIColours, NormaliseWIExposure and corrected use of metadata for Lytro Illum (behaviour of previous versions is still available with decode option ColourCompatibility).
- New decode options CorrectSaturated and ClipMode for the recovery of saturated colours in the highlights.
- New decode option EarlyWhiteBalance to perform white balance on the RAW lenslet image directly (reduce some colour artifacts).
- New decode option HotPixelCorrect for hot pixel correction of the RAW image.
- New ResampMethod option 'barycentric' from the ICCV2013 paper of Cho et al, "Modeling the calibration pipeline of the Lytro camera for high quality light-field image reconstruction".
- New ResampMethod option 'none' from ICCP2020 paper of Le Pendu and Smolic, "High Resolution Light Field Recovery with Fourier Disparity Layer Completion, Demosaicing, and Super-Resolution".

Misc improvements:
- LFWriteESLF: smarter jpeg file writing; reduces to 8-bit and strips weight channel as needed


---v0.5.1----------------------------------------------------------------------
Minor bug fixes and improvements

- LFWriteMetadata now supports writing of simple class objects
- LFGatherCamInfo uses unit_info.json on Lytro cameras that have it, fixes serial number mismatch for these cameras

---v0.5------------------------------------------------------------------------
Mostly reverse-compatible. White images and calibrations should be re-processed. See LFToolbox.pdf for details.

New Features :